v0.0.6:

* Changed the Reform Bulgarian Empire decision's requirements because apparently you can't change highlighted provinces based on the nation looking at the decision aahhhhh

v0.0.5:

+++ Added event chain centered around Konstantinos, heir apparent to the Byzantine Empire!

+ Added institutions file for future use
+ Added ruler for Cilicia (Undead)
+ Added previous rulers for Jerusalem (Undead)
+ Added "Sultanante Min Omar" government reform for the Rahulids
+ Added Ruler Modifier "Uthman's Tolerance" to Uthman Rahulid
+ Added option to "Settlers in the Desert" event that does not create a colony 
+ Added additional triggers to "Raid in [Province]" event to improve usability

* Changed highlighted provinces in the "Proclaim a New Bulgarian Empire" decision
* The "Pillage the city! Leave no heathen unscathed!" option of the "Capture of xyz" event now converts culture
* Halved autonomy gain from Foreign Quarter
* Added ai_importance and fixed up the ai_will_do blocks for decisions. Not sure how much of a difference it'll make, but we'll see.
* New Cyprus ideas loc, courtesy of UndeadWizard
* Made Rahulids Shia to reflect new lore
* Made Mamluk Sultan younger
* Made Rahulid a zealot and cruel
* Made Mamluk sultan careful and craven
* Bumped "Rhomaitokratia" merc maintenance modifer to -25% from -20%
* Lowered MTTH for Rahulid Berber raid event
* Lowered MTTH for "Settlers in the Desert" event

v0.0.4:

+ Added events and a decision that allows the Rahulids to tame the desert
+ Added decisions and events around the establishment of a new Bulgarian Empire
+ Added Rum cores on Ar-Ruha
+ Added Mamluk cores on Malayta, Marash, and 'Antep
+ Added "Fortress of Tamiathis" modifier for the province of Damietta
+ Added "Capture of Cairo" event for Damietta
+ Added ability to form Egypt for Damietta if it controls Cairo and has admin tech 12

* Reinstated Rum cores in provinces 5130, 322, 4312, and 5168