@@ -1,5 +1,5 @@
 damietta_byzantine_coup = {
-	is_triggered_only = yes
+	#is_triggered_only = yes
 	attacker_disabled_po = {
 		po_demand_provinces
 		po_revoke_cores
