@@ -44,6 +44,7 @@ monarchy = {
 				damietta_crusader_tier_1_reform_1
 				#damietta_crusader_tier_1_reform_2
 				damietta_rahulid_sultanate_1
+				damietta_rumi_sultanate_1
 			}
 		}
 		hereditary_vs_nobility = {
