@@ -2819,7 +2819,8 @@ NPL_ideas = {
 KNI_ideas = {
 	start = {
 		discipline = 0.05
-		may_perform_slave_raid = yes
+		#may_perform_slave_raid = yes lol really
+		global_manpower_modifier = 0.1
 	}
 	
 	bonus = {
