@@ -152,6 +152,7 @@ country_event = {
 				flag = damietta_byz_konstantinos_seeking_aid
 				days = 3650
 			}
+			has_global_flag = damietta_byz_nation_aided_konstantinos
 		}
 	}
 
@@ -165,6 +166,7 @@ country_event = {
 		set_country_flag = damietta_supporting_konstantinos_xi
 		clr_global_flag = damietta_byz_konstantinos_seeking_aid
 		custom_tooltip = damietta_supporting_konstantinos_xi.tt
+		set_global_flag = damietta_byz_nation_aided_konstantinos
 	}
 
 	#Supporting a pretender? We would never stoop so low!
@@ -183,6 +185,8 @@ country_event = {
 	trigger = {
 		has_country_flag = damietta_supporting_konstantinos_xi
 	}
+
+	fire_only_once = yes
 
 	mean_time_to_happen = {
 		months = 60
@@ -226,6 +230,12 @@ country_event = {
 	#Oh Konstantinos, my own flesh and blood...
 	option = {
 		name = damietta_byzantium.5.a
+		every_country = {
+			limit = {
+				has_country_flag = damietta_supporting_konstantinos_xi
+			}
+			clr_country_flag = damietta_supporting_konstantinos_xi
+		}
 		add_stability = -1
 		tooltip = {
 			FROM = {
