@@ -1,7 +1,7 @@
 #357 - Libya
 
-#owner = MAM
-#controller = MAM
+owner = TUN
+controller = TUN
 culture = libyan_berber_culture
 religion = sunni
 capital = "Darnah"
@@ -10,12 +10,12 @@ hre = no
 base_tax = 2  
 base_production = 2 
 base_manpower = 1 
-#is_city = yes
+is_city = yes
 add_local_autonomy = 50
-#add_core = MAM
-native_size = 30
-native_ferocity = 5
-native_hostileness = 5
+add_core = TUN
+#native_size = 30
+#native_ferocity = 5
+#native_hostileness = 5
 
 
 
