@@ -23,3 +23,8 @@
  damietta_rahulid_sultanate_1:0 "Sultanate Min Omar"
  damietta_rahulid_sultanate_1_desc:0 "Founded by Omar Rahul in 1248, the Rahulid Sultanate has developed a unique system of governance. With a historical power base in Cairo and little elsewhere, the Sultanate min Omar as it has come to be known utilizes a system similar to Iqta' systems practiced elsewhere, where the Sultan confers land onto subjects who in turn pay tax in the form of grain, coin, or another good depending on the landscape. One muqti may pay his tax in grain the farms located in his province, another in sugar from his own personal plantation along the Nile, another in coin that local traders make selling goods.\n\nThe difference lies in the nature of the muqtis and how they come to administer their land; while nominally appointed by the Sultan, often muqtis will govern the same land that their ancestors governed, whether it be their father, their uncle, or sometimes even their mother or grandmother. This leads to greater stability in the various provinces of the Sultanate, but also leads to greater landholder influence, which the Sultan must respect to remain in power."
  mechanic_damietta_rahulid_sultanate_nobility_yes:0 "Utilizes a unique type of Iqta' system."
+
+ #Rum Reforms
+ damietta_rumi_sultanate_1:0 "Rûmi Sultanate"
+ damietta_rumi_sultanate_1_desc:0 "Taking inspiration from the old Persian satrapies, traditional Turkic diplomatic delegation techniques, and the Byzantine \"theme\" system of military organization, the Rûmi Sultanate is unparalleled in its ability to sustain internal and external attacks. Through its eclectic style of governance, Rûm has been able to find strength from within while being able to exert power without, and has thus maintained its dominant position throughout the Mediterranean, Levant, and Mesopotamia for over four hundred years.\n\nThere is a saying among the Turkic population in Rûm: \"Rum is a mighty river; stable yet fierce, gentle yet powerful, with the power to give life and the power to take it away.\""
+ mechanic_damietta_rumi_sultanate_stability_yes:0 "Increased stability cost when stability is higher than 0, lower stability cost when stability is less than 0."
